# multiagent_procurement

./: Agents.py  MessagingPoolManager.py  README.md  State.py  app.py  big_software_process_new_request_no_risk.json  chatapp.py  docker-compose.dev.yml  docker-compose.yml  endpoints.py  graph.py  ingest_to_db.py  prompts.py  readme_app.md  tools.py  utils.py
.chainlit/: config.toml
Knowledgebase/: big_software_process_new_request.json  bigsoftware.md  convert_pdf.py  temp.html
api/: .env  .env.example  .env.pg  Dockerfile  pyproject.toml
api/knowledge_base/: big_software_process_new_request_no_risk.json  knowledge_seperation.txt  software_request_schema.json
api/knowledge_base/vector_target/appdir/: dir.json
api/knowledge_base/vector_target/process/: Overview Approval Process.md  process.json  summary_all_steps.md
api/knowledge_base/vector_target/risk/: risk.json
api/knowledge_base/vector_target/single_fields/: details_every_step.md  fields.json
api/src/: main.py
api/src/api/: api_router.py
api/src/api/endpoints/: __init__.py  chat.py
api/src/core/: config.py
api/src/deepdoc/parser/: __init__.py  docx_parser.py  json_parser.py  pdf_parser.py
api/src/deepdoc/vision/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  table_structure_recognizer.py
api/src/models/: __init__.py  chat.py  state.py
api/src/rag/app/: book.py  naive.py
api/src/rag/nlp/: __init__.py  rag_tokenizer.py
api/src/rag/utils/: __init__.py
api/src/schemas/: requests.py  responses.py
api/src/scripts/: cl_app.py  database_init.py  helpers.py  ingest_to_db.py  init.sh  stand_alone_streamlit_app.py
api/src/services/: agents_service.py  chat_service.py  model_service.py  pool_service.py  prompt_service.py  tool_service.py  vector_service.py
data/: hash_mapping.json
public/: stylesheet.css
reference-manifests/base/: backend.yaml  kustomization.yaml  node-selectors.yaml  serviceaccount.yaml
reference-manifests/overlays/dev/: backend-env-vars.yaml  config.json  (+1 more)
tests/: Conversation_Agent_test.py  FullPoolManagerScenario.md  messaging_pool_manager_test.py
vector_store/19581e27de7ced00ff1ce50b2047e7a567c76b1cbaebabe5ef03f7c3017bb5b7/: index.faiss  index.pkl
vector_store/2c624232cdd221771294dfbb310aca000a0df6ac8b66b696d90ef06fdefb64a3/: index.faiss  index.pkl
vector_store/35135aaa6cc23891b40cb3f378c53a17a1127210ce60e125ccf03efcfdaec458/: index.faiss  index.pkl
vector_store/3fdba35f04dc8c462986c992bcf875546257113072a909c162f7e470e581e278/: index.faiss  index.pkl
vector_store/4523540f1504cd17100c4835e85b7eefd49911580f8efff0599a8f283be6b9e3/: index.faiss  index.pkl
vector_store/4a44dc15364204a80fe80e9039455cc1608281820fe2b24f1e5233ade6af1dd5/: index.faiss  index.pkl
vector_store/4b227777d4dd1fc61c6f884f48641d02b4d121d3fd328cb08b5531fcacdabf8a/: index.faiss  index.pkl
vector_store/4e07408562bedb8b60ce05c1decfe3ad16b72230967de01f640b7e4729b49fce/: index.faiss  index.pkl
vector_store/4ec9599fc203d176a301536c2e091a19bc852759b255bd6818810a42c5fed14a/: index.faiss  index.pkl
vector_store/4fc82b26aecb47d2868c4efbe3581732a3e7cbcc6c2efb32062c08170a05eeb8/: index.faiss  index.pkl
vector_store/535fa30d7e25dd8a49f1536779734ec8286108d115da5045d77f3b4185d8f790/: index.faiss  index.pkl
vector_store/556d7dc3a115356350f1f9910b1af1ab0e312d4b3e4fc788d2da63668f36d017/: index.faiss  index.pkl
vector_store/59e19706d51d39f66711c2653cd7eb1291c94d9b55eb14bda74ce4dc636d015a/: index.faiss  index.pkl
vector_store/5f9c4ab08cac7457e9111a30e4664920607ea2c115a1433d7be98e97e64244ca/: index.faiss  index.pkl
vector_store/624b60c58c9d8bfb6ff1886c2fd605d2adeb6ea4da576068201b6c6958ce93f4/: index.faiss  index.pkl
vector_store/6b51d431df5d7f141cbececcf79edf3dd861c3b4069f0b11661a3eefacbba918/: index.faiss  index.pkl
vector_store/6b86b273ff34fce19d6b804eff5a3f5747ada4eaa22f1d49c01e52ddb7875b4b/: index.faiss  index.pkl
vector_store/6f4b6612125fb3a0daecd2799dfd6c9c299424fd920f9b308110a2c1fbd8f443/: index.faiss  index.pkl
vector_store/785f3ec7eb32f30b90cd0fcf3657d388b5ff4297f2f9716ff66e9b69c05ddd09/: index.faiss  index.pkl
vector_store/7902699be42c8a8e46fbbb4501726517e86b22c56a189f7625a6da49081b2451/: index.faiss  index.pkl
(+37 files in other folders)
